--- a/web/embedded/public/switch-session_os5.html
+++ b/web/embedded/public/switch-session_os5.html
@@ -116,23 +116,21 @@
 
                 launchAudioOnStart(emulator);
 
-                launchRomButton.addEventListener('click', async () => {
-                    await emulator
+                launchRomButton.addEventListener('click', () =>
+                    emulator
                         .loadRom(new Uint8Array(nor), new Uint8Array(nand))
                         .then(() => emulator.resume())
-                        .catch(e => console.error(e));
+                        .then(() => canvas.style.visibility = 'visible')
+                        .catch(e => console.error(e))
+                );
 
-                    canvas.style.visibility = 'visible';
-                });
-
-                loadSessionButton.addEventListener('click', async () => {
-                    await emulator
+                loadSessionButton.addEventListener('click', () =>
+                    emulator
                         .loadSession(new Uint8Array(image))
                         .then(() => emulator.resume())
-                        .catch(e => console.error(e));
-
-                    canvas.style.visibility = 'visible';
-                });
+                        .then(() => canvas.style.visibility = 'visible')
+                        .catch(e => console.error(e))
+                );
             })().catch((e) => console.error(e));
         </script>
     </body>
